fix(button): bring out button contrast and color

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $brightness-deboss-moz: 2;
 $color-parchment: #fffef0;
 $color-parchment-shadow: #8f5922;
 $color-default: #f6f6f6;
-$color-button: #666;
+$color-button: #830707;
 $color-shadow: rgb(0 0 0 / 60%);
 $color-shadow-dark: rgb(0 0 0 / 80%);
 $color-shadow-light: rgb(0 0 0 / 40%);
